# Order-Delivery-service

./: .dockerignore  .env_example  Cargo.toml  Dockerfile  build.rs  diesel.toml  docker-compose.yaml
migrations/2023-02-24-104039_create_orders-products-buckets/: down.sql  up.sql
migrations/2023-03-09-093824_orders_add_field_address/: down.sql  up.sql
proto/: orders.proto  users.proto
src/: main.rs
src/handlers/: mod.rs  orders_handler.rs
src/middleware/: tracing_middleware.rs
src/models/: mod.rs  orders_model.rs
src/repository/: orders_repository.rs
src/resources/: postgresql.rs
src/routes/api/: config.rs  mod.rs
src/routes/api/v1/: graphql_routes.rs  mod.rs
src/schema/: diesel_schema.rs  graphql_schema.rs  mod.rs  schema.rs
src/services/: mod.rs  orders_service.rs  users_service.rs
src/utils/: configs.rs  errors.rs  graphql_utils.rs  mod.rs  permission_policy.rs  subscription.rs
