[package]
name = "delivery-order"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "delivery-order"

[dependencies]
diesel = { version = "2.0.3", features = ["postgres", "uuid", "chrono"] }
uuid = { version ="1.3.0", features = ["serde"]}
serde= {version="1.0", features = ["derive"]}
chrono = { version = "0.4.23", features = ["serde"] }
lazy_static = "1.4.0"
dotenvy = "0.15"
async-graphql = {version="5.0.6", features = ["uuid"]}
async-graphql-axum = "5.0.6"
tokio = { version = "1.8", features = ["macros", "rt-multi-thread"] }
hyper = "0.14"
axum = { version = "0.6.0", features = ["headers", "ws", "macros"] }
bb8 = "0.8.0"
diesel-async = { version = "0.3.0", features = ["bb8", "postgres"] }
structopt = "0.3.26"
tokio-stream = "0.1.14"
anyhow = "1.0.71"

# logs dependencies
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "fmt"] }

# dependencies for subscription
futures-channel = "0.3.28"
futures-util = "0.3.28"
once_cell = "1.17.2"
slab = "0.4.8"
futures-timer = "3.0.2"
async-stream = "0.3.0"


# gRPC dependencies
tonic = "0.9.1"
prost = "0.11.8"

[build-dependencies]
tonic-build = "0.9.1"